# MIP2022-robot-boxpalletizing-indy10-demo

./: README.md  Report.md
Indy10/: Demo_Palletizing.md  Indy10_Manual.md
Indy10/src/indy10_control/: CMakeLists.txt  package.xml
Indy10/src/indy10_control/config/: indy10_control.yaml
Indy10/src/indy10_description/: CHANGELOG.rst  CMakeLists.txt  package.xml
Indy10/src/indy10_description/urdf/: indy10.gazebo  (+2 more)
Indy10/src/indy10_gazebo/: CMakeLists.txt  package.xml
Indy10/src/indy10_moveit_config/: CHANGELOG.rst  CMakeLists.txt  package.xml
Indy10/src/indy_driver/: CMakeLists.txt  ReadMe.txt  package.xml
Indy10/src/indy_driver/launch/: indy_interface.launch
Indy10/src/indy_driver/msg/: GripCommand.msg  GripState.msg  IndyRobotState.msg  ObjectInfo.msg
Indy10/src/indy_driver/src/: Image_Processing.py  IndyRobot.cpp  IndyRobot_driver.cpp  Robot_Controller.py  video.cpp
Indy10/src/indy_driver/src/SocketHandler/: SocketDefine.h
Manual/: Depth_Camera_Manual.md  Trouble_Shooting.md  Webcam_Manual.md
UR5e/: Demo_Classification_Automate_using_QR_Code.md  UR5e_Maunal.md  rg2_manual.md
src/ur5e_real_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/ur5e_real_moveit_config/config/: kinematics.yaml  simple_moveit_controllers.yaml
src/ur5e_real_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml
src/ur5e_sim_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/ur5e_sim_moveit_config/config/: fake_controllers.yaml  ros_controllers.yaml  simple_moveit_controllers.yaml  ur5e_robot.srdf
src/ur5e_sim_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml
src/ur_interface/: CMakeLists.txt  package.xml
src/ur_interface/msg/: PartList.msg
src/ur_interface/src/: Image_Processing.py  closed_loop_system.cpp  ur_move_demo.cpp
(+31 files in other folders)
