<?xml version="1.0"?>
<package format="2">
  <name>indy_driver</name>
  <version>1.0.3</version>
  <description>The indy_driver package</description>
  <author>Thach Do</author>
  <maintainer email="thach.do@neuromeka.com">Thach Do</maintainer>
  
  <license>BSD</license>
  
  <url type="website">http://wiki.neuromeka.net/index.php?title=ROS_Indy</url>
  <url type="repository">https://github.com/neuromeka-robotics/ros_indy</url>
  <url type="bugtracker">https://github.com/neuromeka-robotics/ros_indyissues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>moveit_ros_planning</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>moveit_visual_tools</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf2_eigen</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>message_generation</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <build_export_depend>moveit_ros_planning</build_export_depend>
  <build_export_depend>moveit_ros_planning_interface</build_export_depend>
  <build_export_depend>moveit_visual_tools</build_export_depend>
  <build_export_depend>tf2_eigen</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>image_transport</build_export_depend>
  <build_export_depend>cv_bridge</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>moveit_ros_planning</exec_depend>
  <exec_depend>moveit_ros_planning_interface</exec_depend>
  <exec_depend>moveit_visual_tools</exec_depend>
  <exec_depend>tf2_eigen</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <depend>industrial_robot_client</depend>
  

  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>

</package>
